Ensure runtime access for bundled tools